# checkin-agent

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
config/prompts/: clarification.yaml  clarify_tradeoff.yaml  explanation.yaml  preference_extraction.yaml
services/agent/: Dockerfile  config.py  main.py
services/agent/graph/: graph.py  state.py
services/agent/graph/nodes/: checkin_completer.py  conflict_detector.py  hard_filter.py  llm_explainer.py  locker.py  preference_extractor.py  reason_builder.py  retrieve_context.py  scorer.py
services/agent/loops/: __init__.py  base.py  clarify_loop.py  repush_loop.py  reseat_loop.py  tool_retry_loop.py
services/agent/recommendation/: __init__.py  engine.py  hard_filter.py  ranker.py  reason_builder.py  scorer.py
services/agent/tools/: __init__.py  seat_tools.py
services/lock/: __init__.py  state_machine.py
services/memory/: Dockerfile  cold_start.py  ecr_pipeline.py  episodic_store.py  main.py  schemas.py  semantic_store.py  working_memory.py
services/memory/routers/: events.py  profile.py  working.py
services/tool_api/: Dockerfile  lock_store.py  main.py  seed_data.py
services/tool_api/routers/: locks.py  orders.py  seats.py  weather.py
shared/schemas/: __init__.py  order.py  preference.py  recommendation.py  seat.py  sse_events.py
